Add InstructiesPDF in SessieOverzicht

--- a/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
@@ -55,3 +55,10 @@
         <p><a asp-controller="Spel" asp-action="SpelSpelen">Simuleer leerkracht start sessie</a></p>
     </div>
 </div>
+<div class="row">
+    <div class="sm-12 col">
+        <div id="pdf">
+            <object height="750" type="application/pdf" data="~/algemenepdfs/instructies.pdf" id="pdf_content"></object>
+        </div>
+    </div>
+</div>
