--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -11,7 +11,7 @@
             <p></p>
             <div>
                 <div id="pdf">
-                    <object height="750" type="application/pdf" data="~/OpdhrachtenG1/@Model.Opdracht.Oefening.Opgave" id="pdf_content"></object>
+                    <object height="750" type="application/pdf" data="~/opdrachtenG1/@Model.Opdracht.Oefening.Opgave" id="pdf_content"></object>
                 </div>
             </div>
             <p><label asp-for="Groepsantwoord"></label></p>
