--- a/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
@@ -32,7 +32,7 @@
                 @if (groep.State == 0 && groep.State != 2 && ViewBag.GeselecteerdeGroep == null)
                 {
                     <li>
-                        <a href="@Url.Action("ZetGroepGereed", "Sessie", new { groepId = groep.GroepId })">
+                        <a href="@Url.Action("ZetGroepGereed", "Sessie", new { sessiecode = Model.Code, groepId = groep.GroepId })">
                             <i class="fas fa-angle-double-right"></i> Klik hier als dit jouw groep is
                         </a>
                     </li>
@@ -40,7 +40,7 @@
                 @if (groep.State == 1 && groep.State != 2 && ViewBag.GeselecteerdeGroep != null && ViewBag.GeselecteerdeGroep.GroepId == groep.GroepId)
                 {
                     <li>
-                        <a href="@Url.Action("ZetGroepNietGereed", "Sessie", new { groepId = groep.GroepId })">
+                        <a href="@Url.Action("ZetGroepNietGereed", "Sessie", new { sessiecode = Model.Code, groepId = groep.GroepId })">
                             <i class="fas fa-angle-double-right"></i> Klik hier om de groep te deselecteren
                         </a>
                     </li>
@@ -59,8 +59,17 @@
 </div>
 <div class="row">
     <div class="sm-12 col text-center">
-        <p>@if (TempData.Count != 0) {<i class="fas fa-exclamation-triangle fa-sm marginright"></i> @TempData["message"]}</p>
-        <p><a asp-controller="Spel" asp-action="SpelSpelen">Simuleer leerkracht start sessie</a></p>
+        <p>
+            @if (TempData.Count != 0)
+            {<i class="fas fa-exclamation-triangle fa-sm marginright"></i> @TempData["message"]}
+        </p>
+        <p>
+            @if (ViewBag.GeselecteerdeGroep != null)
+            {
+                <a href="@Url.Action("StartSpel", "Sessie", new { sessiecode = Model.Code, groepId = ViewBag.GeselecteerdeGroep.GroepId })">Simuleer leerkracht start sessie</a>
+            }
+            @*<a asp-controller="Spel" asp-action="SpelSpelen" asp-route="">Simuleer leerkracht start sessie</a>*@
+        </p>
     </div>
 </div>
 <div class="row">
