add special alert package

--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -7,9 +7,13 @@
 }
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<head>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    
+</head>
 <!-- Latest compiled and minified CSS -->
 @*width:@(progressie[1] / progressie[0])%
-<span class="sr-only"></span>*@
+    <span class="sr-only"></span>*@
 
 <div class="row">
     <div class="sm-12 col text-center">
@@ -20,13 +24,13 @@
                 <h5> opdracht @(progressie[1] + 1) van @(progressie[0])</h5>
             </p>
             <p>
-                <div class="w3-container">
+                <div class="w3-container" onclick="">
                     <div class="w3-light-grey" style="width:60%;margin: auto;">
                         <div class="w3-container w3-blue w3-center" style="width:@((int)progressiePercentageCompleted)%"><span style="color:black">@((int)(progressiePercentageCompleted))%&nbsp;correct&nbsp;opgelost</span></div>
                     </div>
                 </div>
             </p>
-          
+
             <div>
                 <div id="pdf">
                     <object height="750" type="application/pdf" data="~/opdrachtenG1/@Model.Opdracht.Oefening.Opgave" id="pdf_content"></object>
@@ -37,19 +41,20 @@
             <p><span asp-validation-for="Groepsantwoord" class="text-danger"></span></p>
             <p>@TempData["FouteCode"]</p>
             @*<p><a asp-controller="Sessie" asp-action="SessieOverzicht" asp-route-id="@Model.SessieCode" class="btn btn-default">Ga verder</a></p>*@
-            <p><button type="submit" class="">Ga verder</button></p>
+            <p><button type="submit" class="" >Ga verder</button></p>
             @if (Model.TellerFoutePogingen == 3)
             {
                 <div>
                     <p><button type="button">Feedback</button></p>
                 </div>
             }
-            <div hidden>
-                <p><input asp-for="OpdrachtId" type="text" class="form-control" autocomplete="off" value="@Model.Opdracht.OpdrachtId" /></p>
-                <p><input asp-for="GroepId" type="text" class="form-control" autocomplete="off" value="@Model.Groep.GroepId" /></p>
-                <p><input asp-for="sessieId" type="text" class="form-control" autocomplete="off" value="@Model.Sessie.Code" /></p>
-                <p><input asp-for="TellerFoutePogingen" type="text" class="form-control" autocomplete="off" value="@(Model.TellerFoutePogingen + 1)" /></p>
-            </div>
+                <div hidden>
+                    <p><input asp-for="OpdrachtId" type="text" class="form-control" autocomplete="off" value="@Model.Opdracht.OpdrachtId" /></p>
+                    <p><input asp-for="GroepId" type="text" class="form-control" autocomplete="off" value="@Model.Groep.GroepId" /></p>
+                    <p><input asp-for="sessieId" type="text" class="form-control" autocomplete="off" value="@Model.Sessie.Code" /></p>
+                    <p><input asp-for="TellerFoutePogingen" type="text" class="form-control" autocomplete="off" value="@(Model.TellerFoutePogingen + 1)" /></p>
+                    
+                </div>
         </form>
     </div>
 </div>
@@ -58,3 +63,27 @@
     <script asp-src-include="lib/jquery-validation/dist/jquery.validate.js"></script>
     <script asp-src-include="lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 }
+<!DOCTYPE html>
+<html>
+<head>
+
+    <script src="alert/dist/sweetalert-dev.js"></script>
+    <link rel="stylesheet" href="alert/dist/sweetalert.css">
+
+    <style>
+        .divclass {
+            background: #415665;
+            height: 50px;
+            width: 200px;
+            border-radius: 15px;
+            padding: 20px;
+            font-size: 22px;
+            color: #fff;
+        }
+    </style>
+</head>
+<body>  
+  
+</body>
+</html>
+
