--- a/BreakOutBox/Views/Spel/InvoerenToegangscode.cshtml
+++ b/BreakOutBox/Views/Spel/InvoerenToegangscode.cshtml
@@ -1,1 +1,10 @@
-﻿
+﻿@model BreakOutBox.Models.SpelViewModels.SpelSpelenViewModel
+    hallo
+
+<div hidden>
+    <p><input asp-for="OpdrachtId" type="text" class="form-control" autocomplete="off" value="@Model.Opdracht.OpdrachtId" /></p>
+    <p><input asp-for="GroepId" type="text" class="form-control" autocomplete="off" value="@Model.Groep.GroepId" /></p>
+    <p><input asp-for="sessieId" type="text" class="form-control" autocomplete="off" value="@Model.Sessie.Code" /></p>
+    <p><input asp-for="TellerFoutePogingen" type="text" class="form-control" autocomplete="off" value="@(Model.TellerFoutePogingen + 1)" /></p>
+
+</div>
