--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -7,16 +7,10 @@
 }
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<head>
- 
-   
-   
+<head>  
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
-    
-   
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>  
 </head>
 <!-- Latest compiled and minified CSS -->
 @*width:@(progressie[1] / progressie[0])%
@@ -25,7 +19,7 @@
 <div class="row">
     <div class="sm-12 col text-center">
         <h2>@Model.Opdracht.Oefening.Naam</h2>
-        <form method="post" id="formAntwoord">
+        <form method="post" id="formAntwoord" name="formAntwoord">
             <p><h4>@(Model.Opdracht.Oefening.Vak.Naam)</h4></p>
             <p>
                 <h5> opdracht @(progressie[1] + 1) van @(progressie[0])</h5>
@@ -37,7 +31,6 @@
                     </div>
                 </div>
             </p>
-
             <div>
                 <div id="pdf">
                     <object height="750" type="application/pdf" data="~/opdrachtenG1/@Model.Opdracht.Oefening.Opgave" id="pdf_content"></object>
@@ -48,14 +41,7 @@
             <p><span asp-validation-for="Groepsantwoord" class="text-danger"></span></p>
             <p>@TempData["FouteCode"]</p>
             @*<p><a asp-controller="Sessie" asp-action="SessieOverzicht" asp-route-id="@Model.SessieCode" class="btn btn-default">Ga verder</a></p>*@
-
-
-
             <p><button type="button" class="" onclick="promalert()" id="buttonVerzenden">Ga verder</button></p>
-
-
-
-
             @if (Model.TellerFoutePogingen == 3)
             {
                 <div>
@@ -76,53 +62,43 @@
 @section scripts {
     <script asp-src-include="lib/jquery-validation/dist/jquery.validate.js"></script>
     <script asp-src-include="lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
-
-
-   
     <script>
         function promalert() {
-
             if (@(Model.Opdracht.Oefening.Antwoord.ToString()) == document.getElementById("Toegangscode").value) {
-
-                console.log("ja");
-
-
-
-
+                
                 swal({
                     title: "Toegangscode",
-                    text: @(Model.Opdracht.Actie.Omschrijving.ToString()),
+                    text: "placeholder actie",
                     type: "input",
                     showCancelButton: true,
                     closeOnConfirm: false,
                     animation: "slide-from-top",
-                    inputPlaceholder: "Write something"
+                    inputPlaceholder: "Toegangscode"
                 },
                     function (inputValue) {
+                        var j = @(Model.Groep.Pad.getNextOpdracht(Model.Opdracht).Toegangscode.Code.ToString());
                         if (inputValue === false) return false;
 
                         if (inputValue === "") {
                             swal.showInputError("You need to write something!");
                             return false
                         }
-
-
+                        if (!(inputValue == j)){
+                            swal.showInputError("Dit is niet de juiste toegangscode");
+                            console.log("inputvalue1 :" + inputValue);
+                            console.log("inputvalue2 :" + j);
+                            return false
+                        }
                         swal("Nice!", "You wrote: " + inputValue, "success");
-                    });
-
-
-
-
-
+                        document.getElementById("formAntwoord").submit();
+                    }, );
             } else {
-                console.log(@(Model.Opdracht.Oefening.Antwoord.ToString()));
-                console.log("niet juist");
+                    console.log("Antwoord en toegangscode");
+                    console.log(@Model.Opdracht.Oefening.Antwoord.ToString());
+                    console.log(@(Model.Groep.Pad.getNextOpdracht(Model.Opdracht).Toegangscode.Code.ToString()));
+                    document.getElementById("formAntwoord").submit();
 
             }
-
-
-
-
         }
     </script>
        
