fix placeholder actie

--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -25,11 +25,16 @@
                 <h5> opdracht @(progressie[1] + 1) van @(progressie[0])</h5>
             </p>
             <p>
-                <div class="w3-container" onclick="">
+                Antwoord deze opdr: @Model.Opdracht.Oefening.Antwoord.ToString() <br />
+                Toegangscode volgende Opdr: @(Model.Groep.Pad.getNextOpdracht(Model.Opdracht).Toegangscode.Code.ToString())
+            </p>
+
+            <p>
+                @*<div class="w3-container" onclick="">
                     <div class="w3-light-grey" style="width:60%;margin: auto;">
                         <div class="w3-container w3-blue w3-center" style="width:@((int)progressiePercentageCompleted)%"><span style="color:black">@((int)(progressiePercentageCompleted))%&nbsp;correct&nbsp;opgelost</span></div>
                     </div>
-                </div>
+                </div>*@
             </p>
             <div>
                 <div id="pdf">
@@ -68,7 +73,7 @@
                 
                 swal({
                     title: "Toegangscode",
-                    text: "placeholder actie",
+                    text: @Model.Opdracht.Actie.Omschrijving.ToString(),
                     type: "input",
                     showCancelButton: true,
                     closeOnConfirm: false,
