change text readability

--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -94,7 +94,8 @@
                             console.log("inputvalue2 :" + j);
                             return false
                         }
-                        swal("Nice!", "You wrote: " + inputValue, "success");
+                        swal("Juist!", "Op naar de volgende oefening!");
+                        
                         document.getElementById("formAntwoord").submit();
                     }, );
             } else {
