--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -30,11 +30,11 @@
             </p>
 
             <p>
-                @*<div class="w3-container" onclick="">
+                <div class="w3-container" onclick="">
                     <div class="w3-light-grey" style="width:60%;margin: auto;">
                         <div class="w3-container w3-blue w3-center" style="width:@((int)progressiePercentageCompleted)%"><span style="color:black">@((int)(progressiePercentageCompleted))%&nbsp;correct&nbsp;opgelost</span></div>
                     </div>
-                </div>*@
+                </div>
             </p>
             <div>
                 <div id="pdf">
