--- a/BreakOutBox/wwwroot/css/site.css
+++ b/BreakOutBox/wwwroot/css/site.css
@@ -168,3 +168,6 @@ object {
 #pdf_content {
     box-shadow: 0 7px 4px -6px rgba(0,0,0,0.5);
 }
+#pdf_hulp {
+    box-shadow: 0 7px 4px -6px rgba(0,0,0,0.5
+}
