--- a/BreakOutBox/wwwroot/css/site.css
+++ b/BreakOutBox/wwwroot/css/site.css
@@ -168,3 +168,12 @@ object {
 #pdf_content {
     box-shadow: 0 7px 4px -6px rgba(0,0,0,0.5);
 }
+
+.erroricon {
+    margin-left: 0.5em;
+    color: #d44545;
+}
+.correcticon {
+    margin-left: 0.5em;
+    color: #69985d;
+}
