--- a/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
+++ b/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
@@ -24,10 +24,25 @@
         </div>
     }
 </div>
-@*<div class="float-right text-center">
-        @Model.State
-        @if (Model.State == 0)
-            {
-                <a asp-controller="Leerkracht" asp-action="ActiveerSessie">Activeer</a>
-            }
-    </div>*@
+<div class="float-right text-center">
+    @Model.State
+    @if (Model.State == 0) //NonActiefState
+    {
+        <a asp-controller="Leerkracht" asp-action="ActiveerSessie" asp-route-id="@Model.Code">Activeer</a>
+    }
+    @if (Model.State == 1) //ActiefState
+    {
+        <button asp-controller="Leerkracht" asp-action="DeactiveerSessie" asp-route-id="@Model.Code" class="">Deactiveer</button>
+        <a asp-controller="Leerkracht" asp-action="BlokkeerSessie" asp-route-id="@Model.Code">Blokkeer</a>
+        <a asp-controller="Leerkracht" asp-action="StartSpelSessie" asp-route-id="@Model.Code">Start</a>
+    }
+    @if (Model.State == 2) //InSpelState
+    {
+        <a asp-controller="Leerkracht" asp-action="DeactiveerSessie" asp-route-id="@Model.Code">Deactiveer</a>
+        <a asp-controller="Leerkracht" asp-action="Blokkeer" asp-route-id="@Model.Code">Blokkeer</a>
+    }
+    @if (Model.State == 3) //GeblokkeerdState
+    {
+        <a asp-controller="Leerkracht" asp-action="DeblokkeerSessie" asp-route-id="@Model.Code">Deblokkeer</a>
+    }
+</div>
