--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -21,7 +21,7 @@
 <div class="row">
     <div class="sm-12 col text-center">
         <h2>@Model.Opdracht.Oefening.Naam</h2>
-        <form method="post" id="fromAntwoord" name="formAntwoord">
+        <form method="post" id="formAntwoord" name="formAntwoord">
             <p><h4>@(Model.Opdracht.Oefening.Vak.Naam)</h4></p>
             <p>
                 <h5> opdracht @(progressie[1] + 1) van @(progressie[0])</h5>
@@ -77,8 +77,9 @@
     <script>
         function promalert() {
 
-            if (document.getElementById("Toegangscode").value == null || document.getElementById("Toegangscode").value == ""){
-                document.getElementById('foutTeksvakLeeg').innerHTML = "Toegangscode mag niet leeg zijn"
+            if (document.getElementById("Toegangscode").value == null || document.getElementById("Toegangscode").value == "") {
+                console.log("in de if leeg");
+                document.getElementById('foutTeksvakLeeg').innerHTML = "Toegangscode mag niet leeg zijn";
                 return;
             }
 
@@ -109,7 +110,7 @@
                         }
 
                         swal("Juist!", "Op naar de volgende oefening!", );
-                        setTimeout(delaySubmit, 3000);
+                        setTimeout(delaySubmit, 1000);
                     }, );
             } else {
                     console.log("Antwoord en toegangscode");
