--- a/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
+++ b/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
@@ -25,24 +25,31 @@
     }
 </div>
 <div class="float-right text-center">
-    @Model.State
     @if (Model.State == 0) //NonActiefState
     {
-        <a asp-controller="Leerkracht" asp-action="ActiveerSessie" asp-route-id="@Model.Code">Activeer</a>
+        <form>
+            <button asp-controller="Leerkracht" asp-action="ActiveerSessie" asp-route-id="@Model.Code" class="">Activeer</button>
+        </form>
     }
     @if (Model.State == 1) //ActiefState
     {
-        <button asp-controller="Leerkracht" asp-action="DeactiveerSessie" asp-route-id="@Model.Code" class="">Deactiveer</button>
-        <a asp-controller="Leerkracht" asp-action="BlokkeerSessie" asp-route-id="@Model.Code">Blokkeer</a>
-        <a asp-controller="Leerkracht" asp-action="StartSpelSessie" asp-route-id="@Model.Code">Start</a>
+        <form>
+            <button asp-controller="Leerkracht" asp-action="DeactiveerSessie" asp-route-id="@Model.Code" class="">Deactiveer</button>
+            <button asp-controller="Leerkracht" asp-action="BlokkeerSessie" asp-route-id="@Model.Code" class="">Blokkeer</button>
+            <button asp-controller="Leerkracht" asp-action="StartSpelSessie" asp-route-id="@Model.Code" class="">Start</button>
+        </form>
     }
     @if (Model.State == 2) //InSpelState
     {
-        <a asp-controller="Leerkracht" asp-action="DeactiveerSessie" asp-route-id="@Model.Code">Deactiveer</a>
-        <a asp-controller="Leerkracht" asp-action="Blokkeer" asp-route-id="@Model.Code">Blokkeer</a>
+        <form>
+            <button asp-controller="Leerkracht" asp-action="DeactiveerSessie" asp-route-id="@Model.Code" class="">Deactiveer</button>
+            <button asp-controller="Leerkracht" asp-action="Blokkeer" asp-route-id="@Model.Code" class="">Blokkeer</button>
+        </form>
     }
     @if (Model.State == 3) //GeblokkeerdState
     {
-        <a asp-controller="Leerkracht" asp-action="DeblokkeerSessie" asp-route-id="@Model.Code">Deblokkeer</a>
+        <form>
+            <button asp-controller="Leerkracht" asp-action="DeblokkeerSessie" asp-route-id="@Model.Code" class="">Deblokkeer</button>
+        </form>
     }
 </div>
