Groep state pattern verbeterd en GroepGeblokkeerdState toegevoegd

--- a/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
+++ b/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
@@ -21,6 +21,7 @@
                     <li>@(leerling.Voornaam + " " + leerling.Achternaam)</li>
                 }
             </ul>
+            <h6><a>Details</a></h6>
         </div>
     }
 </div>
