--- a/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
+++ b/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
@@ -15,13 +15,14 @@
     {
         <div class="sm-12 md-6 col groep">
             <h4><i class="fas fa-users fa-sm marginright"></i> Groep @(groep.GroepId)<i class="fas fa-times fa-sm erroricon"></i>@*<i class="fas fa-check fa-sm"></i>*@</h4>
+            <h6>Status: @groep.GetState().Beschrijving</h6>
             <ul>
                 @foreach (var leerling in groep.Leerlingen)
                 {
                     <li>@(leerling.Voornaam + " " + leerling.Achternaam)</li>
                 }
             </ul>
-            <h6><a>Details</a></h6>
+            <h6><a asp-controller="Leerkracht" asp-action="OverzichtGroep" asp-route-id="@groep.GroepId" asp-route-id2="@Model.Code">Details<i class="fa fa-arrow-right" style="color:darkgreen"></i></a></h6>
         </div>
     }
 </div>
