--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -12,19 +12,28 @@
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
+    
+
+
+    <style>
+
+
+    </style>
+
 </head>
 <script src="~/js/site.js"></script>
 <!-- Latest compiled and minified CSS -->
 @*width:@(progressie[1] / progressie[0])%
     <span class="sr-only"></span>*@
 
+
 <div class="row">
     <div class="sm-12 col text-center">
-        <h2>@Model.Opdracht.Oefening.Naam</h2>
+        <h2 style="text-decoration:underline">@Model.Opdracht.Oefening.Naam</h2>
         <form method="post" id="formAntwoord" name="formAntwoord">
-            <p><h4>@(Model.Opdracht.Oefening.Vak.Naam)</h4></p>
+            <p><h4 style="text-decoration: underline">@(Model.Opdracht.Oefening.Vak.Naam)</h4></p>
             <p>
-                <h5> opdracht @(progressie[1] + 1) van @(progressie[0])</h5>
+                <h5>opdracht @(progressie[1] + 1) van de @(progressie[0])</h5>
             </p>
             <p>
                
@@ -73,12 +82,15 @@
 @section scripts {
     <script asp-src-include="lib/jquery-validation/dist/jquery.validate.js"></script>
     <script asp-src-include="lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
-    <script>
-        console.log(@Model.Opdracht.Oefening.Antwoord.ToString());
-        console.log(@(Model.Groep.Pad.getNextOpdracht(Model.Opdracht).Toegangscode.Code.ToString()));
-        
-        function promalert() {
+    
 
+    <script>
+        console.log("Antwoord " + @Model.Opdracht.Oefening.Antwoord.ToString());
+        console.log("Toegangscode " +@(Model.Groep.Pad.getNextOpdracht(Model.Opdracht).Toegangscode.Code.ToString()));
+        console.log("progressie% completed " + @((int)progressiePercentageCompleted));    
+    </script>
+    <script>       
+        function promalert() {
             if (document.getElementById("Toegangscode").value == null || document.getElementById("Toegangscode").value == "") {
                 console.log("in de if leeg");
                 document.getElementById('foutTeksvakLeeg').innerHTML = "Toegangscode mag niet leeg zijn";
