--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -35,17 +35,14 @@
             <p>
                 <h5>opdracht @(progressie[1] + 1) van de @(progressie[0])</h5>
             </p>
-            <p>
-               
-            </p>
+
             @*<p>
                 <div class="w3-container" onclick="">
                     <div class="w3-light-grey" style="width:60%;margin: auto;">
-                        <div class="w3-container w3-blue w3-center" style="width:@((int)progressiePercentageCompleted)%"><span style="color:black">a</span></div>
+                        <div class="w3-container w3-blue w3-center" style="width:@((int)progressiePercentageCompleted)%"><span style="color:black">@((int)(progressiePercentageCompleted))%&nbsp;correct&nbsp;opgelost</span></div>
                     </div>
                 </div>
-            </p>*@
-
+            </p>*@         
             <div>
                 <div id="pdf">
                     <object height="750" type="application/pdf" data="~/opdrachtenG1/@Model.Opdracht.Oefening.Opgave" id="pdf_content"></object>
